// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sequence many '' AST to match snapshot 1`] = `[]`;

exports[`sequence many 'a' Error to match snapshot 1`] = `
{
  "expected": [
    "'b'",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`sequence many 'aa' Error to match snapshot 1`] = `
{
  "expected": [
    "'b'",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`sequence many 'ab' AST to match snapshot 1`] = `
[
  [
    "a",
    "b",
  ],
]
`;

exports[`sequence many 'aba' Error to match snapshot 1`] = `
{
  "expected": [
    "'b'",
  ],
  "pos": {
    "column": 4,
    "index": 3,
    "line": 1,
  },
}
`;

exports[`sequence many 'abab' AST to match snapshot 1`] = `
[
  [
    "a",
    "b",
  ],
  [
    "a",
    "b",
  ],
]
`;

exports[`sequence many 'baba' Error to match snapshot 1`] = `
{
  "expected": [
    "'a'",
    "eof",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`sequence many 'bcaba' Error to match snapshot 1`] = `
{
  "expected": [
    "'a'",
    "eof",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`sequence or '' Error to match snapshot 1`] = `
{
  "expected": [
    "'that'",
    "'this'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`sequence or 'bar' Error to match snapshot 1`] = `
{
  "expected": [
    "'that'",
    "'this'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`sequence or 'foo' Error to match snapshot 1`] = `
{
  "expected": [
    "'that'",
    "'this'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`sequence or 'that' Error to match snapshot 1`] = `
{
  "expected": [
    "'foo'",
  ],
  "pos": {
    "column": 5,
    "index": 4,
    "line": 1,
  },
}
`;

exports[`sequence or 'thatfoo' AST to match snapshot 1`] = `
[
  "that",
  "foo",
]
`;

exports[`sequence or 'this' Error to match snapshot 1`] = `
{
  "expected": [
    "'foo'",
  ],
  "pos": {
    "column": 5,
    "index": 4,
    "line": 1,
  },
}
`;

exports[`sequence or 'thisfoo' AST to match snapshot 1`] = `
[
  "this",
  "foo",
]
`;

exports[`sequence trim '' Error to match snapshot 1`] = `
{
  "expected": [
    "'b'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`sequence trim 'a' Error to match snapshot 1`] = `
{
  "expected": [
    "'b'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`sequence trim 'b  a b' AST to match snapshot 1`] = `
[
  "b",
  "a",
  "b",
]
`;

exports[`sequence trim 'b ab' AST to match snapshot 1`] = `
[
  "b",
  "a",
  "b",
]
`;

exports[`sequence trim 'b abb' Error to match snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": {
    "column": 5,
    "index": 4,
    "line": 1,
  },
}
`;

exports[`sequence trim 'b' Error to match snapshot 1`] = `
{
  "expected": [
    "'a'",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`sequence trim 'ba  b' AST to match snapshot 1`] = `
[
  "b",
  "a",
  "b",
]
`;

exports[`sequence trim 'ba b' AST to match snapshot 1`] = `
[
  "b",
  "a",
  "b",
]
`;

exports[`sequence trim 'bab' AST to match snapshot 1`] = `
[
  "b",
  "a",
  "b",
]
`;

exports[`sequence trim 'bcaba' Error to match snapshot 1`] = `
{
  "expected": [
    "'a'",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;
